--- a/login/mini02/WebContent/memberForm.html
+++ b/login/mini02/WebContent/memberForm.html
@@ -7,13 +7,13 @@
 	function fn_sendMember() {
 		var frmMember = document.frmMember;
 		var id = frmMember.id.value;
-		var pw = frmMember.pw.value;
+		var pwd = frmMember.pwd.value;
 		var name = frmMember.name.value;
 		var email = frmMember.email.value;
 
 		if (id.length == 0 || id == "") {
 			alert("아이디는 필수입니다.");
-		} else if (pw.length == 0 || pw == "") {
+		} else if (pw.length == 0 || pwd == "") {
 			alert("비밀번호는 필수입니다.")
 		} else if (name.length == 0 || name == "") {
 			alert("이름은 필수입니다.")
@@ -39,7 +39,7 @@
 
 			<tr>
 				<td>비밀번호</td>
-				<td><input type="password" name="pw"></td>
+				<td><input type="password" name="pwd"></td>
 			</tr>
 
 			<tr>
