--- a/login/mini02/WebContent/memberForm.html
+++ b/login/mini02/WebContent/memberForm.html
@@ -13,7 +13,7 @@
 
 		if (id.length == 0 || id == "") {
 			alert("아이디는 필수입니다.");
-		} else if (pw.length == 0 || pwd == "") {
+		} else if (pwd.length == 0 || pwd == "") {
 			alert("비밀번호는 필수입니다.")
 		} else if (name.length == 0 || name == "") {
 			alert("이름은 필수입니다.")
