--- a/login/mini02/WebContent/WebContent/memberForm.html
+++ b/login/mini02/WebContent/WebContent/memberForm.html
@@ -1,59 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>회원가입</title>
- <script type="text/javascript">
-        function sendMes(){
-            var frMem = document.frMem;
-			var id = frMem.id.vlaue;
-			var pw = frMem.pw.vlaue;
-			var name = frMem.name.vlaue;
-			var email = frMem.email.vlaue;
-			
-			if(id.lenght == 0 || id == ""){
-				alert("id 필수");
-			}else if(pw.lenght == 0 || pw == ""){
-				alert("pw 필수");
-			}else if(name.lenght == 0 || name == ""){
-				alert("name 필수");
-			}else if(email.lenght == 0 || email == ""){
-				alert("email 필수");
-			}else{
-				frMem.method = "post";
-				frMem.action = "join";
-				frMem.submit();	
-			}
-        }
-    </script>
+<meta charset="utf-8">
+<title>회원 가입창</title>
+<script type="text/javascript">
+	function fn_sendMember() {
+		var frmMember = document.frmMember;
+		var id = frmMember.id.value;
+		var pwd = frmMember.pwd.value;
+		var name = frmMember.name.value;
+		var email = frmMember.email.value;
+
+		if (id.length == 0 || id == "") {
+			alert("아이디는 필수입니다.");
+		} else if (pwd.length == 0 || pwd == "") {
+			alert("비밀번호는 필수입니다.")
+		} else if (name.length == 0 || name == "") {
+			alert("이름은 필수입니다.")
+		} else if (email.length == 0 || email == "") {
+			alert("이메일은 필수입니다.")
+		} else {
+			frmMember.method = "post";
+			frmMember.action = "member3";
+			frmMember.submit();
+		}
+	}
+</script>
 </head>
 <body>
-	<form name="frMem" >
+	<form name="frmMember">
 		<table>
-			<th>회원 가입</th>
+			<th>회원 가입창</th>
+
 			<tr>
 				<td>아이디</td>
 				<td><input type="text" name="id"></td>
 			</tr>
+
 			<tr>
 				<td>비밀번호</td>
-				<td><input type="password" name="pw"></td>
+				<td><input type="password" name="pwd"></td>
 			</tr>
-			<tr>
-				<td>이름</td>
-				<td><input type="text" name="name"></td>
-			</tr>
+
 			<tr>
 				<td>이메일</td>
 				<td><input type="text" name="email"></td>
 			</tr>
+
+			<tr>
+				<td>이름</td>
+				<td><input type="text" name="name"></td>
+			</tr>
+
 		</table>
-			<input type="button" value="가입" onclick="sendMes()">
-			<input type="hidden" name="command" value="addMember">
-			<input type="reset" value="다시 입력">
-			<a href="http://localhost:8090/webShop/login.html">
-			<input type="button" value="로그인화면"></a>
-			
+		<input type="button" value="가입하기" onclick="fn_sendMember()"> <input
+			type="reset" value="다시 입력"> <input type="hidden"
+			name="command" value="addMember" /> <a
+			href="http://localhost:8080/mini02/login.jsp"> <input
+			type="button" value="로그인화면"></a>
+
 	</form>
 </body>
 </html>
