--- a/login/mini02/WebContent/WebContent/login.html
+++ b/login/mini02/WebContent/WebContent/login.html
@@ -12,8 +12,8 @@
 			
 			if(id.lenght == 0 || id == ""){
 				alert("id 필수");
-			}else if(pw.lenght == 0 || pw == ""){
-				alert("pw 필수");
+			}else if(pwd.lenght == 0 || pwd == ""){
+				alert("pwd 필수");
 			}else{"D:/java/02. 회원관리 기능 확장/memberForm.html"
 				frTm.method = "post";
 	            frTm.action = "login";
@@ -25,7 +25,7 @@
 <body>
     <form name="frName" action="login" method="POST" enctype="UTF-8">
         아이디 <input type="text" name="id"><br>
-        비밀번호 <input type="password" name="pw"><br>
+        비밀번호 <input type="password" name="pwd"><br>
         <input type="button" value="로그인" onclick="sendMes()">
         <input type="hidden" name="command" value="login">
 		<input type="reset" value="다시 작성">&nbsp; &nbsp;&nbsp;
